# bili_upload_tool

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  push_to_dockerhub.yml
CHANGELOGS/: V1.1.md  V1.2.md  V1.md  V2.1.md  v2.2.md  v2.3.md  v2.md
Docker-main/: Dockerfile
Docker-main/main/: .env  Pipfile  download.py  main.py  pyproject.toml  requirements.txt  upload.py
Docker-main/main/plugins/: bili_webup.py
app/: Pipfile  README.md  bili.py  requirements.txt  start.py
app/bilisession/: __init__.py
app/providers/: __init__.py  youtube.py
app/utils/: __init__.py
docker-compose/: .env  docker-compose.yaml
example/: README.md
main/: Pipfile  README.md  download.py  main.py  requirements.txt  upload.py
nginx/: Dockerfile  nginx.conf
uploader/: download.py  requirements.txt  upload.py
uploader/plugins/: bili_webup.py
web/: Dockerfile  next.config.js  package.json  styles.css
web/.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
web/.next/server/: _error.js
web/.next/server/chunks/: 859.js
web/.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json  index.html  index.js  index.js.nft.json
web/.next/static/Ur9EkMscQYuoYute8kxuf/: _buildManifest.js
web/.next/static/chunks/: 379-76618bbb267fa92e.js  _error.js  amp.js  webpack.js
web/components/: Form.tsx  Info.tsx
web/pages/: _app.tsx  index.tsx
(+58 files in other folders)
